--- a/tests/test.html
+++ b/tests/test.html
@@ -2,10 +2,10 @@
 <head>
   <!--<script src="http://live.yworks.com/yfiles-for-html/resources/scripts/rgbcolor.js"></script>-->
   <!--<script src="http://live.yworks.com/yfiles-for-html/resources/scripts/rgbcolor.js"></script>-->
-  <script src="../../jsPDF/dist/jspdf.debug.js"></script>
-  <script src="../rgbcolor.js"></script>
-  <script src="../svg2pdf.js"></script>
-  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js"></script>-->
+  <!--<script src="../../jsPDF/dist/jspdf.debug.js"></script>-->
+  <!--<script src="../rgbcolor.js"></script>-->
+  <!--<script src="../svg2pdf.js"></script>-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.22/require.min.js"></script>
 </head>
 <body>
 
@@ -535,11 +535,14 @@
 //  var svgElementToPdf = require("svg2pdf");
 //  var jsPDF = require("jsPDF");
 
-//  require([
-//    "../jsPDF/dist/jspdf.min.js",
-////    "../jsPDF/jspdf.js",
-//    "../svg2pdf.js/svg2pdf"
-//  ], function (jsPDF, svgElementToPdf) {
+  require.config({
+    baseUrl: "../"
+  });
+  require([
+    "../jsPDF/dist/jspdf.debug",
+//    "../jsPDF/jspdf.js",
+    "svg2pdf"
+  ], function (jsPDF, svgElementToPdf) {
 
 
     function svgToPdf(svgElement, margin) {
@@ -575,6 +578,6 @@
     }
 
     document.getElementById("button").addEventListener("click", save);
-//  });
+  });
 </script>
 </body>
