--- a/tests/test17.html
+++ b/tests/test17.html
@@ -30,8 +30,8 @@
     <rect transform="translate(8 10)" fill="white" stroke="green" stroke-width="3" rx="6" ry="6" width="145"
           height="40"/>
     <rect transform="translate(15 15)" fill="url(#redPattern)" width="15" height="30"/>
-    <!--<rect transform="translate({{item.colorWidth[0].greenTranslate}} 15)" ng-show={{item.colorWidth[0].greenWidth}}-->
-          <!--fill="url(#greenPattern)" width={{item.colorWidth[0].greenWidth}} height="30"/>-->
+    <rect transform="translate(30 15)" ng-show={{item.colorWidth[0].greenWidth}}
+          fill="url(#greenPattern)" width="15" height="30"/>
     <!--<rect transform="translate({{item.colorWidth[0].yellowTranslate}} 15)" ng-show={{item.colorWidth[0].yellowWidth}}-->
           <!--fill="url(#yellowPattern)" width={{item.colorWidth[0].yellowWidth}} height="30"/>-->
     <!--<rect transform="translate({{item.colorWidth[0].blackTranslate}} 15)" ng-show={{item.colorWidth[0].blackwWidth}}-->
