--- a/tests/test12.html
+++ b/tests/test12.html
@@ -3,8 +3,8 @@
   <!--<script src="http://live.yworks.com/yfiles-for-html/resources/scripts/rgbcolor.js"></script>-->
   <!--<script src="http://live.yworks.com/yfiles-for-html/resources/scripts/rgbcolor.js"></script>-->
   <script src="../../jsPDF/dist/jspdf.debug.js"></script>
-  <script src="../rgbcolor.js"></script>
-  <script src="../svg2pdf.js"></script>
+  <script src="../src/rgbcolor.js"></script>
+  <script src="../src/svg2pdf.js"></script>
 </head>
 <body>
 <svg id="svgElement" xmlns="http://www.w3.org/2000/svg" width="500px" height="300px" viewBox="0 0 500 300">
