--- a/tests/test18.html
+++ b/tests/test18.html
@@ -3,8 +3,8 @@
   <!--<script src="http://live.yworks.com/yfiles-for-html/resources/scripts/rgbcolor.js"></script>-->
   <!--<script src="http://live.yworks.com/yfiles-for-html/resources/scripts/rgbcolor.js"></script>-->
   <script src="../../jsPDF/dist/jspdf.debug.js"></script>
-  <script src="../rgbcolor.js"></script>
-  <script src="../svg2pdf.js"></script>
+  <script src="../src/rgbcolor.js"></script>
+  <script src="../src/svg2pdf.js"></script>
 </head>
 <body>
 <svg id="svgElement" xmlns="http://www.w3.org/2000/svg" width="305" height="230">
@@ -28,14 +28,14 @@
         <!--<rect x="0.35" y="0.35" width="0.05" height="0.05" fill= "red" />-->
         <!--<rect x="0" y="0" width="0.4" height="0.4" fill= "none" stroke="black" stroke-width="0.005"/>-->
       <!--</pattern>-->
-      <pattern id="secondPattern" width="0.4" height="0.4" patternUnits="objectBoundingBox" patternContentUnits="objectBoundingBox">
+      <pattern id="secondPattern-awesome/23~34" width="0.4" height="0.4" patternUnits="objectBoundingBox" patternContentUnits="objectBoundingBox">
         <rect x="0" y="0" width="0.4" height="0.4" fill= "url(#gradient)" stroke="black" stroke-width="0.005"/>
         <rect x="0" y="0" width="0.05" height="0.05" fill= "#876fc1" />
         <rect x="0.35" y="0.35" width="0.05" height="0.05" fill= "red" />
       </pattern>
     </defs>
-    <rect transform="translate(130 5) rotate(45) scale(0.5)" x="20" y="0" width="200" height="200" stroke= "#333333" stroke-width="2" fill="url(#secondPattern)" />
-    <rect x="98" y="98" width="150" height="150" stroke= "#333333" stroke-width="2" fill="url(#secondPattern)" />
+    <rect transform="translate(130 5) rotate(45) scale(0.5)" x="20" y="0" width="200" height="200" stroke= "#333333" stroke-width="2" fill="url(#secondPattern-awesome/23~34)" />
+    <rect x="98" y="98" width="150" height="150" stroke= "#333333" stroke-width="2" fill="url(#secondPattern-awesome/23~34)" />
 </svg>
 
 <br>
