--- a/tests/test2.html
+++ b/tests/test2.html
@@ -3,8 +3,7 @@
   <!--<script src="http://live.yworks.com/yfiles-for-html/resources/scripts/rgbcolor.js"></script>-->
   <!--<script src="jspdf.js"></script>-->
   <script src="../../jsPDF/dist/jspdf.debug.js"></script>
-  <script src="../rgbcolor.js"></script>
-  <script src="../svg2pdf.js"></script>
+  <script src="../dist/svg2pdf.min.js"></script>
 </head>
 <body>
 <svg id="svgElement" xmlns="http://www.w3.org/2000/svg" width="300px" height="160px" viewBox="0 0 300 160"
@@ -174,7 +173,7 @@
     var width = svgElement.width.baseVal.value + 2 * margin;
     var height = svgElement.height.baseVal.value + 2 * margin;
     var pdf = new jsPDF('l', 'pt', [width, height]);
-    svgElementToPdf(svgElement, pdf, {removeInvalid: true});
+    svg2pdf(svgElement, pdf, {removeInvalid: true});
 
     return pdf.output('datauristring');
   }
