--- a/tests/test12.html
+++ b/tests/test12.html
@@ -7,25 +7,31 @@
   <script src="../src/svg2pdf.js"></script>
 </head>
 <body>
-<svg id="svgElement" xmlns="http://www.w3.org/2000/svg" width="500px" height="300px" viewBox="0 0 500 300">
-  <defs>
-    <marker id="mid" markerWidth="20" markerHeight="20" refX="0" refY="0" orient="auto" viewBox="-11 -11 22 22">
-      <circle fill="none" r="10" stroke="#000000"></circle>
-      <!--<rect x="-10" y="-10" width="20" height="20"></rect>-->
-      <path d="M 0 0 L 10 3 L 0 6 z" transform="translate(0 -3)"></path>
-    </marker>
-  </defs>
-  <!--<rect x="-10" y="-10" width="20" height="20"></rect>-->
-  <path d="M 0 0 h 100 v 100 h -100" fill="none" stroke="#000000" marker-start="url(#mid)" marker-end="url(#mid)" marker-mid="url(#mid)" transform="translate(20 20)"></path>
-  <path d="M 0 0 C 33 33 66 33 100 0 C 133 33 166 33 200 0 M 20 40 h 100" fill="none" stroke="#000000" marker-start="url(#mid)" marker-end="url(#mid)"  marker-mid="url(#mid)" transform="translate(20 60)"></path>
-  <path d="M 0 0 l 50 20 l 50 -20 M 0 50 h 100" fill="none" stroke="#000000" marker-mid="url(#mid)" transform="translate(20 140)"></path>
-</svg>
+<div style="float: left">
+  <h4>SVG:</h4>
+  <svg id="svgElement" xmlns="http://www.w3.org/2000/svg" width="500px" height="300px" viewBox="0 0 500 300">
+    <defs>
+      <marker id="mid" markerWidth="20" markerHeight="20" refX="0" refY="0" orient="auto" viewBox="-11 -11 22 22">
+        <circle fill="none" r="10" stroke="#000000"></circle>
+        <!--<rect x="-10" y="-10" width="20" height="20"></rect>-->
+        <path d="M 0 0 L 10 3 L 0 6 z" transform="translate(0 -3)"></path>
+        <line x1="0" y1="0" x2="-10" y2="0" stroke="red"></line>
+      </marker>
+    </defs>
+    <!--<rect x="-10" y="-10" width="20" height="20"></rect>-->
+    <path d="M 0 0 h 100 v 100 h -100" fill="none" stroke="#000000" marker-start="url(#mid)" marker-end="url(#mid)"
+          stroke-width="2" marker-mid="url(#mid)" transform="translate(20 20)"></path>
+    <path d="M 0 0 C 33 33 66 33 100 0 C 133 33 166 33 200 0 M 20 40 h 100" fill="none" stroke="#000000"
+          marker-start="url(#mid)" marker-end="url(#mid)" marker-mid="url(#mid)" transform="translate(20 60)"></path>
+    <path d="M 0 0 l 50 20 l 50 -20 M 0 50 h 100" fill="none" stroke="#000000" marker-mid="url(#mid)"
+          stroke-width="0.5" transform="translate(20 140)"></path>
+  </svg>
+</div>
 
-<br>
-<button onclick="save();">Convert</button>
-<br>
-
-<iframe id="pdf"></iframe>
+<div style="float: left">
+  <h4>PDF:</h4>
+  <iframe id="pdf" style="width: 550px; height: 600px"></iframe>
+</div>
 
 <script>
   function svgToPdf(svgElement, margin) {
@@ -54,5 +60,7 @@
 //    });
     document.getElementById("pdf").src = svgToPdf(document.getElementById("svgElement"), 0);
   }
+
+  save();
 </script>
 </body>
