marker support for polygons and fixed marker orientation

--- a/tests/test12.html
+++ b/tests/test12.html
@@ -28,6 +28,12 @@
 
     <line x1="0" y1="0" x2="50" y2="40" marker-start="url(#mid)" marker-end="url(#mid)"
           transform="translate(20 220)" stroke="#000000"></line>
+
+    <polygon points="0,0 30,10 40,40 10,30" fill="none" stroke="black" transform="translate(20 280) "
+              marker-end="url(#mid)" marker-mid="url(#mid)"></polygon>
+
+    <polygon points="0,0 30,10 40,40 10,30" fill="none" stroke="black" transform="translate(20 320) rotate(25)"
+             marker-start="url(#mid)" marker-mid="url(#mid)"></polygon>
   </svg>
 </div>
 
