--- a/tests/test12.html
+++ b/tests/test12.html
@@ -17,10 +17,13 @@
         <path d="M 0 0 L 10 3 L 0 6 z" transform="translate(0 -3)"></path>
         <line x1="0" y1="0" x2="-10" y2="0" stroke="red"></line>
       </marker>
+      <marker viewBox="0 0 15 10" refX="2" refY="5" markerWidth="7" markerHeight="7" orient="auto" id="ygc15_0">
+        <path d="M 0 0 L 15 5 L 0 10 z" fill="#336699"/>
+      </marker>
     </defs>
     <!--<rect x="-10" y="-10" width="20" height="20"></rect>-->
     <path d="M 0 0 h 100 v 100 h -100" fill="none" stroke="#000000" marker-start="url(#mid)" marker-end="url(#mid)"
-          stroke-width="2" marker-mid="url(#mid)" transform="translate(20 20)"></path>
+          stroke-width="2" marker-mid="url(#ygc15_0)" transform="translate(20 20)"></path>
     <path d="M 0 0 C 33 33 66 33 100 0 C 133 33 166 33 200 0 M 20 40 h 100" fill="none" stroke="#000000"
           marker-start="url(#mid)" marker-end="url(#mid)" marker-mid="url(#mid)" transform="translate(20 60)"></path>
     <path d="M 0 0 l 50 20 l 50 -20 M 0 50 h 100" fill="none" stroke="#000000" marker-mid="url(#mid)"
