#28 fix tspan visibility bug and simplified visibility conditions

--- a/tests/test25.html
+++ b/tests/test25.html
@@ -22,6 +22,12 @@
       <tspan visibility="visible">Visible</tspan>
       <tspan>Invisible</tspan>
     </text>
+
+    <g visibility="hidden">
+      <text x="20" y="60" fill="white">
+        <tspan>Invisible, second level</tspan>
+      </text>
+    </g>
   </svg>
 </div>
 <div style="float: left">
