--- a/tests/test28.html
+++ b/tests/test28.html
@@ -28,7 +28,7 @@
   function svgToPdf(svgElement, margin) {
     var width = svgElement.width.baseVal.value + 2 * margin;
     var height = svgElement.height.baseVal.value + 2 * margin;
-    var pdf = new jsPDF('l', 'pt', [width, height]);
+    var pdf = new jsPDF('p', 'pt', [width, height]);
     svg2pdf(svgElement, pdf, {removeInvalid: true});
 
     return pdf.output('datauristring');
