--- a/tests/test19.html
+++ b/tests/test19.html
@@ -12,7 +12,7 @@
   <svg id="svgElement" xmlns="http://www.w3.org/2000/svg" width="500" height="650" font-family="Arial"
       font-size="15px" style="border: 1px dotted gray">
       
-      <path d="M 200 10 L 200 490 M 10 20 L 490 20 z" stroke="blue" stroke-width="1" />
+      <path d="M 200 10 L 200 650 M 10 20 L 490 20 z" stroke="blue" stroke-width="1" />
       <text fill="blue" x="200" y="20">
           <tspan>text-anchor auto</tspan>
       </text>
@@ -82,6 +82,10 @@
           <tspan x="200">x="200"</tspan>
           <tspan y="500">y="500"</tspan>
       </text>
+
+      <g transform="translate(200 520)" text-anchor="middle">
+          <text fill="blue">Inherited text-anchor (middle)</text>
+      </g>
   </svg>
 </div>
 <!--
