#40: no longer convert png images to jpeg (this allows for proper transparency)

--- a/tests/test2.html
+++ b/tests/test2.html
@@ -3,7 +3,8 @@
   <!--<script src="http://live.yworks.com/yfiles-for-html/resources/scripts/rgbcolor.js"></script>-->
   <!--<script src="jspdf.js"></script>-->
   <script src="../../jsPDF/dist/jspdf.debug.js"></script>
-  <script src="../dist/svg2pdf.min.js"></script>
+  <script src="../src/rgbcolor.js"></script>
+  <script src="../src/svg2pdf.js"></script>
 </head>
 <body>
 <svg id="svgElement" xmlns="http://www.w3.org/2000/svg" width="300px" height="160px" viewBox="0 0 300 160"
@@ -28,6 +29,33 @@
            id="ygc2_5"/>
   </defs>
   <g style="pointer-events:visiblePainted" transform="translate(10 0)" image-rendering="auto" shape-rendering="auto">
+    <path fill="none" stroke="rgb(0,0,0)"
+          d="M 170.02148786254514,50.65520647330925 L 64.41176470588235,106.98039215686273" stroke-opacity="1"
+          stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"/>
+    <use transform="matrix(0.882353 -0.470588 0.470588 0.882353 60 109.333)" style="pointer-events: none;"
+         xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ygc2_0"/>
+  </g>
+  <g>
+    <path fill="none" stroke="rgb(0,0,0)"
+          d="M 177.67175735393306,59.72518823370711 L 155.1499947000159,95.76000847997456" stroke-opacity="1"
+          stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"/>
+    <use transform="matrix(0.529999 -0.847998 0.847998 0.529999 152.5 100)" style="pointer-events: none;"
+         xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ygc2_0"/>
+  </g>
+  <g>
+    <path fill="none" stroke="rgb(0,0,0)"
+          d="M 202.32824264606694,59.72518823370711 L 224.8500052999841,95.76000847997456" stroke-opacity="1"
+          stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"/>
+    <use transform="matrix(-0.529999 -0.847998 0.847998 -0.529999 227.5 100)" style="pointer-events: none;"
+         xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ygc2_0"/>
+  </g>
+  <g>
+    <path fill="none" stroke="rgb(0,0,0)"
+          d="M 209.97851213745486,50.65520647330925 L 315.5882352941176,106.98039215686273" stroke-opacity="1"
+          stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"/>
+    <use transform="matrix(-0.882353 -0.470588 0.470588 -0.882353 320 109.333)" style="pointer-events: none;"
+         xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ygc2_0"/>
+  </g>
     <!-- TODO: edges were here -->
     <g transform="translate(170 20)">
       <g/>
@@ -113,33 +141,7 @@
       </defs>
     </g>
     <g>
-      <path fill="none" stroke="rgb(0,0,0)"
-            d="M 170.02148786254514,50.65520647330925 L 64.41176470588235,106.98039215686273" stroke-opacity="1"
-            stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"/>
-      <use transform="matrix(0.882353 -0.470588 0.470588 0.882353 60 109.333)" style="pointer-events: none;"
-           xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ygc2_0"/>
-    </g>
-    <g>
-      <path fill="none" stroke="rgb(0,0,0)"
-            d="M 177.67175735393306,59.72518823370711 L 155.1499947000159,95.76000847997456" stroke-opacity="1"
-            stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"/>
-      <use transform="matrix(0.529999 -0.847998 0.847998 0.529999 152.5 100)" style="pointer-events: none;"
-           xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ygc2_0"/>
-    </g>
-    <g>
-      <path fill="none" stroke="rgb(0,0,0)"
-            d="M 202.32824264606694,59.72518823370711 L 224.8500052999841,95.76000847997456" stroke-opacity="1"
-            stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"/>
-      <use transform="matrix(-0.529999 -0.847998 0.847998 -0.529999 227.5 100)" style="pointer-events: none;"
-           xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ygc2_0"/>
-    </g>
-    <g>
-      <path fill="none" stroke="rgb(0,0,0)"
-            d="M 209.97851213745486,50.65520647330925 L 315.5882352941176,106.98039215686273" stroke-opacity="1"
-            stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10"/>
-      <use transform="matrix(-0.882353 -0.470588 0.470588 -0.882353 320 109.333)" style="pointer-events: none;"
-           xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#ygc2_0"/>
-    </g>
+
     <g transform="translate(172 6)">
       <text font-family="Arial" font-size="12px" font-style="normal" font-weight="normal" text-anchor="start"
             fill="rgb(0,0,0)" fill-opacity="1" dy="1em" transform="translate(0 0)">Switch
