fix custom-fonts test

--- a/tests/custom-fonts.html
+++ b/tests/custom-fonts.html
@@ -3,9 +3,8 @@
   <meta http-equiv="content-type" content="application/xhtml+xml; charset=utf-8" />
 
   <script src="../../jsPDF/dist/jspdf.debug.js"></script>
-  <script src="../../jsPDF/test/customFonts/defaultVFS.js"></script>
-  <script src="../src/rgbcolor.js" charset="utf-8"></script>
-  <script src="../src/svg2pdf.js" charset="utf-8"></script>
+  <script src="./Batang.js"></script>
+  <script src="../dist/svg2pdf.js"></script>
 
   <style>
     @font-face {
