--- a/test/unit/foo2.html
+++ b/test/unit/foo2.html
@@ -22,7 +22,7 @@
     </g>
   </svg>
 </div>
-<script src="../../node_modules/jspdf-yworks/dist/jspdf.debug.js"></script>
+<script src="../../node_modules/jspdf/dist/jspdf.umd.js"></script>
 <script src="../../dist/svg2pdf.js"></script>
 <script>
   const pdfExport = () => {
